waether icon img imported
I got the API call to work and return the weather icon but now it won't search for a city when it's  typed in

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ hr {
   text-align: right;
   font-size: 30px;
 }
-#current-day-icons {
+.current-day-icons {
   margin: 0 auto;
   margin-top: 0px;
   padding: 0;
