--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
   border: 1px solid #abecd6;
   border-radius: 4px;
   text-align: center;
-  box-shadow: 0px 5px 2px #abecd6;
+  box-shadow: 0px 5px 2px #ace0f9;
 }
 #current-city-row {
   width: 70%;
@@ -81,7 +81,7 @@
   border: 1px solid #abecd6;
   border-radius: 4px;
   text-align: center;
-  box-shadow: 0px 5px 2px #abecd6;
+  box-shadow: 0px 5px 2px #ace0f9;
 }
 #day-info-row {
   padding: 10px;
@@ -92,7 +92,7 @@
 }
 #high-container {
   padding: 4px;
-  background: #abecd6;
+  background: #ace0f9;
   transition: transform 0.2s;
   font-size: 20px;
 }
@@ -161,7 +161,7 @@ hr {
 }
 #current-container {
   padding: 4px;
-  background: #abecd6;
+  background: #ace0f9;
   border-left: 2px solid #fbed96;
   border-right: 2px solid #fbed96;
   transition: transform 0.2s;
@@ -186,7 +186,7 @@ hr {
 }
 #low-container {
   padding: 4px;
-  background: #abecd6;
+  background: #ace0f9;
   transition: transform 0.2s;
   font-size: 20px;
 }
@@ -214,11 +214,11 @@ hr {
   margin-right: 0px;
   padding: 10px;
   text-align: center;
-  border: 2px solid #ace0f9;
+  border: 2px solid #abecd6;
   border-radius: 4px;
 }
 #days-container {
-  background: #abecd6;
+  background: #ace0f9;
   padding: 10px;
   text-align: center;
   font-size: 20px;
@@ -244,7 +244,7 @@ hr {
 }
 #rise-container {
   position: relative;
-  background-image: linear-gradient(to top, #abecd6 0%, #fbed96 100%);
+  background-image: linear-gradient(to top, #ace0f9 0%, #fbed96 100%);
   padding: 0;
   margin: 0 auto;
   margin-left: 7px;
@@ -279,7 +279,7 @@ hr {
 }
 #down-container {
   position: relative;
-  background-image: linear-gradient(to bottom, #abecd6 0%, #fbed96 100%);
+  background-image: linear-gradient(to bottom, #ace0f9 0%, #fbed96 100%);
   padding: 0;
   margin: 0 auto;
   margin-right: 7px;
