--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
   background: #fbed96;
   color: #212121;
   padding: 5px;
-  border: 1px solid #abecd6;
+  border: 1px solid #ace0f9;
   border-radius: 4px;
   text-align: center;
   box-shadow: 0px 5px 2px #ace0f9;
@@ -78,7 +78,7 @@
   background: #fbed96;
   color: #212121;
   padding: 5px;
-  border: 1px solid #abecd6;
+  border: 1px solid #ace0f9;
   border-radius: 4px;
   text-align: center;
   box-shadow: 0px 5px 2px #ace0f9;
@@ -87,7 +87,7 @@
   padding: 10px;
   margin-left: 0px;
   margin-right: 0px;
-  border: 2px solid #abecd6;
+  border: 2px solid #ace0f9;
   border-radius: 4px;
 }
 #high-container {
@@ -161,7 +161,7 @@ hr {
 }
 #current-container {
   padding: 4px;
-  background: #ace0f9;
+  background: #abecd6;
   border-left: 2px solid #fbed96;
   border-right: 2px solid #fbed96;
   transition: transform 0.2s;
@@ -186,7 +186,7 @@ hr {
 }
 #low-container {
   padding: 4px;
-  background: #ace0f9;
+  background: #abecd6;
   transition: transform 0.2s;
   font-size: 20px;
 }
@@ -214,11 +214,11 @@ hr {
   margin-right: 0px;
   padding: 10px;
   text-align: center;
-  border: 2px solid #abecd6;
+  border: 2px solid #ace0f9;
   border-radius: 4px;
 }
 #days-container {
-  background: #ace0f9;
+  background: #abecd6;
   padding: 10px;
   text-align: center;
   font-size: 20px;
@@ -235,7 +235,7 @@ hr {
   padding: 10px;
   padding-left: 0;
   padding-right: 0;
-  border: 2px solid #abecd6;
+  border: 2px solid #ace0f9;
   border-radius: 4px;
 }
 #rise-down-row {
@@ -244,7 +244,7 @@ hr {
 }
 #rise-container {
   position: relative;
-  background-image: linear-gradient(to top, #ace0f9 0%, #fbed96 100%);
+  background-image: linear-gradient(to top, #abecd6 0%, #fbed96 100%);
   padding: 0;
   margin: 0 auto;
   margin-left: 7px;
@@ -279,7 +279,7 @@ hr {
 }
 #down-container {
   position: relative;
-  background-image: linear-gradient(to bottom, #ace0f9 0%, #fbed96 100%);
+  background-image: linear-gradient(to bottom, #abecd6 0%, #fbed96 100%);
   padding: 0;
   margin: 0 auto;
   margin-right: 7px;
