--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .main-container {
   display: block;
   background: #ebf8fd;
-  border: 2px solid #ace0f9;
+  border: 2px solid #91c2d8;
   border-radius: 4px;
   padding: 10px;
   margin: 0 auto;
@@ -14,7 +14,7 @@
   margin: 0 auto;
   padding: 10px;
   border-radius: 4px;
-  border: 2px solid #ace0f9;
+  border: 2px solid #91c2d8;
   line-height: 15px;
 }
 #search-box {
@@ -30,10 +30,10 @@
   margin: 0 auto;
   margin-left: 12px;
   width: 20%;
-  background: #f7b271;
+  background: #f8d2ae;
   color: #212121;
   padding: 5px;
-  border: 1px solid #ace0f9;
+  border: 1px solid #91c2d8;
   border-radius: 4px;
   text-align: center;
   box-shadow: 0px 5px 2px #91c2d8;
@@ -64,10 +64,10 @@
   color: #212121;
 }
 #celsius-a:hover {
-  color: #f7b271;
+  color: #f8d2ae;
 }
 #fahrenheit-a:hover {
-  color: #f7b271;
+  color: #f8d2ae;
 }
 #current-geolocation-row {
   padding: 10px;
@@ -75,10 +75,10 @@
 #current-geolocation {
   display: inline-block;
   margin: 0 auto;
-  background: #f7b271;
+  background: #f8d2ae;
   color: #212121;
   padding: 5px;
-  border: 1px solid #ace0f9;
+  border: 1px solid #91c2d8;
   border-radius: 4px;
   text-align: center;
   box-shadow: 0px 5px 2px #91c2d8;
@@ -87,18 +87,18 @@
   padding: 10px;
   margin-left: 0px;
   margin-right: 0px;
-  border: 2px solid #ace0f9;
+  border: 2px solid #91c2d8;
   border-radius: 4px;
 }
 #high-container {
   padding: 4px;
-  background: #91c2d8;
+  background: #ace0f9;
   transition: transform 0.2s;
   font-size: 20px;
 }
 #high-container:hover {
   transform: scale(1.2);
-  border: 2px solid #f7b271;
+  border: 2px solid #f8d2ae;
   z-index: 3;
 }
 #high {
@@ -161,15 +161,15 @@ hr {
 }
 #current-container {
   padding: 4px;
-  background: #91c2d8;
-  border-left: 2px solid #f7b271;
-  border-right: 2px solid #f7b271;
+  background: #ace0f9;
+  border-left: 2px solid #f8d2ae;
+  border-right: 2px solid #f8d2ae;
   transition: transform 0.2s;
   font-size: 20px;
 }
 #current-container:hover {
   transform: scale(1.2);
-  border: 2px solid #f7b271;
+  border: 2px solid #f8d2ae;
   z-index: 2;
 }
 #current-date {
@@ -186,13 +186,13 @@ hr {
 }
 #low-container {
   padding: 4px;
-  background: #91c2d8;
+  background: #ace0f9;
   transition: transform 0.2s;
   font-size: 20px;
 }
 #low-container:hover {
   transform: scale(1.2);
-  border: 2px solid #f7b271;
+  border: 2px solid #f8d2ae;
   z-index: 1;
 }
 #low {
@@ -218,7 +218,7 @@ hr {
   border-radius: 4px;
 }
 #days-container {
-  background: #91c2d8;
+  background: #ace0f9;
   padding: 10px;
   text-align: center;
   font-size: 20px;
@@ -235,7 +235,7 @@ hr {
   padding: 10px;
   padding-left: 0;
   padding-right: 0;
-  border: 2px solid #ace0f9;
+  border: 2px solid #91c2d8;
   border-radius: 4px;
 }
 #rise-down-row {
@@ -244,7 +244,7 @@ hr {
 }
 #rise-container {
   position: relative;
-  background-image: linear-gradient(to top, #91c2d8 0%, #f7b271 100%);
+  background-image: linear-gradient(to top, #ace0f9 0%, #f8d2ae 100%);
   padding: 0;
   margin: 0 auto;
   margin-left: 7px;
@@ -279,7 +279,7 @@ hr {
 }
 #down-container {
   position: relative;
-  background-image: linear-gradient(to bottom, #91c2d8 0%, #f7b271 100%);
+  background-image: linear-gradient(to bottom, #ace0f9 0%, #f8d2ae 100%);
   padding: 0;
   margin: 0 auto;
   margin-right: 7px;
