--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .main-container {
   display: block;
   background: #ebf8fd;
-  border: 2px solid #abecd6;
+  border: 2px solid #ace0f9;
   border-radius: 4px;
   padding: 10px;
   margin: 0 auto;
@@ -14,7 +14,7 @@
   margin: 0 auto;
   padding: 10px;
   border-radius: 4px;
-  border: 2px solid #abecd6;
+  border: 2px solid #ace0f9;
   line-height: 15px;
 }
 #search-box {
@@ -33,7 +33,7 @@
   background: #f8d2ae;
   color: #212121;
   padding: 5px;
-  border: 1px solid #abecd6;
+  border: 1px solid #ace0f9;
   border-radius: 4px;
   text-align: center;
   box-shadow: 0px 5px 2px #91c2d8;
@@ -78,7 +78,7 @@
   background: #f8d2ae;
   color: #212121;
   padding: 5px;
-  border: 1px solid #abecd6;
+  border: 1px solid #ace0f9;
   border-radius: 4px;
   text-align: center;
   box-shadow: 0px 5px 2px #91c2d8;
@@ -87,7 +87,7 @@
   padding: 10px;
   margin-left: 0px;
   margin-right: 0px;
-  border: 2px solid #abecd6;
+  border: 2px solid #ace0f9;
   border-radius: 4px;
 }
 #high-container {
@@ -214,7 +214,7 @@ hr {
   margin-right: 0px;
   padding: 10px;
   text-align: center;
-  border: 2px solid #91c2d8;
+  border: 2px solid #ace0f9;
   border-radius: 4px;
 }
 #days-container {
@@ -235,7 +235,7 @@ hr {
   padding: 10px;
   padding-left: 0;
   padding-right: 0;
-  border: 2px solid #abecd6;
+  border: 2px solid #ace0f9;
   border-radius: 4px;
 }
 #rise-down-row {
