--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ hr {
   text-align: right;
   font-size: 12px;
 }
-#days-container-row {
+#forecastRow {
   margin: 0 auto;
   margin-top: 10px;
   margin-left: 0px;
@@ -219,7 +219,7 @@ hr {
   border: 2px solid #ace0f9;
   border-radius: 4px;
 }
-#days-container {
+#forecast-container {
   background: #ace0f9;
   padding: 10px;
   text-align: center;
