--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
   margin: 0 auto;
   margin-left: 12px;
   width: 20%;
-  background: #f8d2ae;
+  background: #ace0f9;
   color: #212121;
   padding: 5px;
   border: 1px solid #ace0f9;
@@ -77,7 +77,7 @@
 #current-geolocation {
   display: inline-block;
   margin: 0 auto;
-  background: #f8d2ae;
+  background: #ace0f9;
   color: #212121;
   padding: 5px;
   border: 1px solid #ace0f9;
@@ -100,7 +100,7 @@
 }
 #high-container:hover {
   transform: scale(1.2);
-  border: 2px solid #f8d2ae;
+  border: 2px solid #212121;
   z-index: 3;
 }
 #high {
@@ -111,7 +111,7 @@
 hr {
   margin: 0 auto;
   padding: 2px;
-  border-top: 2px solid #212121;
+  border-top: 2px solid #48484a;
 }
 #current-date-high {
   margin: 0 auto;
@@ -164,14 +164,14 @@ hr {
 #current-container {
   padding: 4px;
   background: #ace0f9;
-  border-left: 2px solid #f8d2ae;
-  border-right: 2px solid #f8d2ae;
+  border-left: 2px solid #212121;
+  border-right: 2px solid #212121;
   transition: transform 0.2s;
   font-size: 20px;
 }
 #current-container:hover {
   transform: scale(1.2);
-  border: 2px solid #f8d2ae;
+  border: 2px solid #212121;
   z-index: 2;
 }
 #current-date {
@@ -194,7 +194,7 @@ hr {
 }
 #low-container:hover {
   transform: scale(1.2);
-  border: 2px solid #f8d2ae;
+  border: 2px solid #212121;
   z-index: 1;
 }
 #low {
@@ -236,10 +236,14 @@ hr {
   text-align: center;
   font-size: 20px;
 }
+#forecast-t-d {
+  font-size: 12px;
+}
 #forecast-icons {
   position: relative;
   margin: 0 auto;
   padding: 0px;
+  border-radius: 4px;
 }
 #humidity-row {
   margin-top: 10px;
