--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@
 }
 #high-container:hover {
   transform: scale(1.2);
-  border: 2px solid #212121;
+  border: 2px solid #48484a;
   z-index: 3;
 }
 #high {
@@ -164,14 +164,14 @@ hr {
 #current-container {
   padding: 4px;
   background: #ace0f9;
-  border-left: 2px solid #212121;
-  border-right: 2px solid #212121;
+  border-left: 2px solid #48484a;
+  border-right: 2px solid #48484a;
   transition: transform 0.2s;
   font-size: 20px;
 }
 #current-container:hover {
   transform: scale(1.2);
-  border: 2px solid #212121;
+  border: 2px solid #48484a;
   z-index: 2;
 }
 #current-date {
@@ -194,7 +194,7 @@ hr {
 }
 #low-container:hover {
   transform: scale(1.2);
-  border: 2px solid #212121;
+  border: 2px solid #48484a;
   z-index: 1;
 }
 #low {
