--- a/style.css
+++ b/style.css
@@ -1,131 +1,112 @@
+body {
+  margin: 0;
+}
+p {
+  margin: 0;
+}
+.row {
+  display: flex;
+  padding: 10px;
+  border-radius: 4px;
+  border: 2px solid #ace0f9;
+  width: 95%;
+}
+.col {
+  display: flex;
+  flex-direction: column;
+}
+button:hover {
+  cursor: pointer;
+}
 .main-container {
-  display: block;
+  align-items: center;
+  gap: 10px;
   background: #ebf8fd;
   border: 2px solid #ace0f9;
   border-radius: 4px;
   padding: 10px;
-  margin: 0 auto;
-  height: 100%;
+  margin: 20px auto;
   max-width: 450px;
   font-family: "Jost", sans-serif;
 }
-#search-city-container-row {
-  display: block;
-  margin: 0 auto;
-  padding: 10px;
-  border-radius: 4px;
-  border: 2px solid #ace0f9;
-  line-height: 15px;
+#city-search-container {
+  align-items: center;
+  justify-content: space-between;
 }
-#search-box {
-  display: inline-block;
+#search-bar {
   padding: 5px;
-  margin: 0 auto;
-  width: 74%;
+  width: 70%;
   border-radius: 4px;
   border: 1px solid #212121;
 }
-#submit-button {
-  display: inline-block;
-  margin: 0 auto;
-  margin-left: 12px;
-  width: 20%;
+#submit-button,
+#current-location-button {
   background: #ace0f9;
   color: #212121;
-  padding: 5px;
+  padding: 5px 20px;
   border: 1px solid #ace0f9;
   border-radius: 4px;
-  text-align: center;
-  box-shadow: 0px 5px 2px #91c2d8;
 }
-#current-city-row {
-  width: 70%;
-  padding: 0;
-  padding-top: 10px;
-  margin: 0 auto;
-  border-radius: 4px;
+.current-location-button-container {
+  justify-content: center;
 }
-#current-city-container {
-  text-align: center;
-  font-size: 40px;
+.current-city-container {
+  position: relative;
+  justify-content: center;
+  width: 95%;
 }
-#f-c-a-container {
-  text-align: center;
-  padding: 0px;
-  margin: 0 auto;
+.f-c-container {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  height: 25%;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.f-c-container button {
   font-size: 12px;
-}
-#celsius-a {
-  text-decoration: none;
   color: #212121;
-  cursor: default;
+  background-color: transparent;
+  border: none;
 }
-#fahrenheit-a {
-  text-decoration: none;
-  color: #212121;
-  cursor: default;
-}
-#celsius-a:hover {
+.f-c-container button:hover,
+.active {
   color: #f8d2ae;
 }
-#fahrenheit-a:hover {
-  color: #f8d2ae;
+.current-row {
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
 }
-#current-geolocation-row {
-  padding: 10px;
-}
-#current-geolocation {
-  display: inline-block;
-  margin: 0 auto;
-  background: #ace0f9;
-  color: #212121;
+.container {
   padding: 5px;
-  border: 1px solid #ace0f9;
-  border-radius: 4px;
-  text-align: center;
-  box-shadow: 0px 5px 2px #91c2d8;
-}
-#day-info-row {
-  padding: 10px;
-  margin-left: 0px;
-  margin-right: 0px;
-  border: 2px solid #ace0f9;
-  border-radius: 4px;
-}
-#high-container {
-  padding: 4px;
+  width: calc(100% / 3);
   background: #ace0f9;
-  transition: transform 0.2s;
-  font-size: 20px;
 }
-#high-container:hover {
+.container:hover {
   transform: scale(1.2);
-  border: 2px solid #48484a;
-  z-index: 3;
+  box-shadow: 2px 2px 20px grey;
+  z-index: 1;
+  transition: 200ms;
 }
-#high {
-  margin: 0 auto;
-  padding: 4px;
-  font-size: 20px;
+.container-header {
+  text-align: left;
+  font-size: 16px;
+  margin: 0;
+}
+.container-subheader {
+  text-align: right;
+  font-size: 12px;
+  margin: 0;
 }
 hr {
-  margin: 0 auto;
-  padding: 2px;
-  border-top: 2px solid #48484a;
+  margin: 0;
+  border: 1px solid #48484a;
 }
-#current-date-high {
-  margin: 0 auto;
-  padding: 0;
-  padding-right: 4px;
-  padding-left: 4px;
+.temp {
+  padding-top: 10px;
   text-align: right;
-  font-size: 12px;
-}
-#day-icons-container {
-  padding: 0px;
-  margin: 0 auto;
-  text-align: right;
-  font-size: 30px;
 }
 .current-day-icons {
   margin: 0 auto;
@@ -134,187 +115,34 @@ hr {
   text-align: left;
   position: relative;
 }
-#day-temp-container {
-  padding: 0px;
-  margin: 0 auto;
-  font-size: 20px;
-  text-align: right;
+#humidity-row,
+#windspeed-row {
+  justify-content: center;
 }
-#high-temp {
-  margin: 0px;
-  margin-top: 40px;
-  margin-right: 15px;
-  font-size: 20px;
-  padding: 0px;
+#humidity,
+#windspeed {
+  padding-left: 5px;
 }
-#current-temp {
-  margin: 0px;
-  margin-top: 40px;
-  margin-right: 15px;
-  font-size: 20px;
-  padding: 0px;
-}
-#low-temp {
-  margin: 0px;
-  margin-top: 40px;
-  margin-right: 15px;
-  font-size: 20px;
-  padding: 0px;
-}
-#current-container {
-  padding: 4px;
-  background: #ace0f9;
-  border-left: 2px solid #48484a;
-  border-right: 2px solid #48484a;
-  transition: transform 0.2s;
-  font-size: 20px;
-}
-#current-container:hover {
-  transform: scale(1.2);
-  border: 2px solid #48484a;
-  z-index: 2;
-}
-#current-date {
-  margin: 0 auto;
-  padding: 4px;
-}
-#current-time {
-  margin: 0 auto;
-  padding: 0;
-  padding-right: 4px;
-  padding-left: 4px;
-  text-align: right;
-  font-size: 12px;
-}
-#low-container {
-  padding: 4px;
-  background: #ace0f9;
-  transition: transform 0.2s;
-  font-size: 20px;
-}
-#low-container:hover {
-  transform: scale(1.2);
-  border: 2px solid #48484a;
-  z-index: 1;
-}
-#low {
-  margin: 0 auto;
-  padding: 4px;
-}
-#current-date-low {
-  margin: 0 auto;
-  padding: 0;
-  padding-right: 4px;
-  padding-left: 4px;
-  text-align: right;
-  font-size: 12px;
-}
-#wind-speed-row {
-  margin: 0 auto;
-  margin-top: 10px;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding: 10px;
-  text-align: center;
-  border: 2px solid #ace0f9;
-  border-radius: 4px;
-}
-
 #forecast-row {
-  margin: 0 auto;
-  margin-top: 10px;
-  margin-left: 0px;
-  margin-right: 0px;
+  width: 100%;
+  background-color: #ebf8fd;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 10px;
+}
+.forecast-container {
+  background-color: #ace0f9;
+  align-items: center;
   padding: 10px;
-  text-align: center;
-  border: 2px solid #ace0f9;
-  border-radius: 4px;
 }
-#forecast-container {
-  background: #ace0f9;
-  padding: 10px;
-  text-align: center;
-  font-size: 20px;
+.forecast-container small {
+  font-size: 10px;
 }
-#forecast-t-d {
-  font-size: 12px;
+.forecast-container img {
+  height: 50px;
+  width: auto;
 }
-#forecast-icons {
-  position: relative;
-  margin: 0 auto;
-  padding: 0px;
-  border-radius: 4px;
-}
-#humidity-row {
-  margin-top: 10px;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding: 10px;
-  padding-left: 0;
-  padding-right: 0;
-  border: 2px solid #ace0f9;
-  border-radius: 4px;
-  text-align: center;
-}
-/*#rise-down-container-row {
-  margin-top: 10px;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding: 10px;
-  padding-left: 0;
-  padding-right: 0;
-  border: 2px solid #ace0f9;
-  border-radius: 4px;
-  text-align: center;
-}
-#rise-down-row {
-  margin-top: 0px;
-  padding: 0px;
-}
-#rise-container {
-  position: relative;
-  background-image: linear-gradient(to top, #ace0f9 0%, #f8d2ae 100%);
-  padding: 0;
-  margin: 0 auto;
-  margin-left: 7px;
-  text-align: center;
-  font-size: 16px;
-}
-#rise-down-icons-container {
-  padding: 0px;
-  padding-top: 3px;
-  margin: 0 auto;
-  font-size: 20px;
-  text-align: right;
-}
-#rise-down-sun {
-  padding: 0px;
-}
-#arrow {
-  padding: 0;
-  margin-right: 1px;
-}
-#rise-down-time-container {
-  margin: 0 auto;
-  padding: 0px;
-}
-#rise-down-time {
-  padding: 0px;
-  margin-top: 10px;
-  margin-left: 3px;
-  text-align: right;
-  width: 80%;
-  border: none;
-}
-#down-container {
-  position: relative;
-  background-image: linear-gradient(to bottom, #ace0f9 0%, #f8d2ae 100%);
-  padding: 0;
-  margin: 0 auto;
-  margin-right: 7px;
-  text-align: center;
-  font-size: 16px;
-}*/
 footer {
   text-align: center;
 }
